Added bounding box for Torus and small optimization to calculateColor that called normal twice instead of once

--- a/build.gradle
+++ b/build.gradle
@@ -39,6 +39,13 @@ dependencies {
     testCompileOnly 'org.projectlombok:lombok:1.18.24'
     testAnnotationProcessor 'org.projectlombok:lombok:1.18.24'
 
+    implementation group: 'com.aparapi', name: 'aparapi', version: '2.0.0'
+
+    // https://mvnrepository.com/artifact/org.apache.commons/commons-lang3
+    implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.0'
+
+
+
 }
 
 run {
