--- a/build.gradle
+++ b/build.gradle
@@ -9,6 +9,7 @@ mainClassName = 'raytracing.Main'
 // tag::repositories[]
 repositories {
     mavenCentral()
+    maven { url 'https://jitpack.io' }
 }
 // end::repositories[]
 
@@ -42,7 +43,7 @@ dependencies {
     implementation group: 'org.ejml', name: 'ejml-all', version: '0.41'
 
 
-//     implementation group: 'com.aparapi', name: 'aparapi', version: '2.0.0'
+    implementation 'com.github.ansonliao:Images-To-Video:0.1'
 
     // https://mvnrepository.com/artifact/org.apache.commons/commons-lang3
     implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.0'
