Added support for json scene files

--- a/build.gradle
+++ b/build.gradle
@@ -28,6 +28,8 @@ dependencies {
     // https://mvnrepository.com/artifact/com.google.inject/guice
     implementation group: 'com.google.inject', name: 'guice', version: '4.0'
 
+    implementation 'com.google.code.gson:gson:2.9.1'
+
     implementation 'org.orbisgis:poly2tri:0.4.0'
 
     implementation group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.17.2'
