--- a/build.gradle
+++ b/build.gradle
@@ -21,8 +21,8 @@ jar {
 // end::jar[]
 
 // tag::dependencies[]
-sourceCompatibility = 1.15
-targetCompatibility = 1.15
+sourceCompatibility = 1.17
+targetCompatibility = 1.17
 
 dependencies {
     // https://mvnrepository.com/artifact/com.google.inject/guice
@@ -35,6 +35,7 @@ dependencies {
     implementation group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.17.2'
     implementation group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.17.2'
     implementation group: 'org.apache.logging.log4j', name: 'log4j-slf4j-impl', version: '2.17.2'
+    implementation 'org.projectlombok:lombok:1.18.26'
 
     compileOnly 'org.projectlombok:lombok:1.18.24'
     annotationProcessor 'org.projectlombok:lombok:1.18.24'
